--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ reqwest = { version = "0.11.16", features = ["blocking"] }
 scraper = "0.16.0"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_yaml = "0.9.21"
+thiserror = "1.0.40"
